--- a/src/App.scss
+++ b/src/App.scss
@@ -122,10 +122,10 @@ html{
 
 .main{
   position: relative;
-  height: 90vh;
+  height: 100vh;
   background: var(--main-bg);
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  width: 80%;
+  width: 100%;
  
 }
 
@@ -189,3 +189,25 @@ html{
   flex-direction:column;
   height:40vh;
 }
+
+
+
+
+@media all  and (min-width: 600px) {
+  .main{
+   
+    height: 100vh;
+  
+    box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+    width:90%;}
+   
+  }
+@media only screen and (min-width:900px) {
+  .main{
+   
+    height: 90vh;
+    background: var(--main-bg);
+   
+    width:40%;}
+   
+  }
