--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,13 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   // background-color: #282c34;
 }
 
-html{
+html {
   font-size: 62.5%;
-  color:white;
+  color: white;
 }
 
 :root {
@@ -17,9 +17,9 @@ html{
   --day-thunder-bg: #001525;
   --day-clear-bg: #fe9928;
   --day-cloud-bg: #5389ac;
-  --day-drizzle-bg:#2f5882;
-  --day-haze-bg:#5389ac;
-  --day-mist-bg:#3CD3AD;
+  --day-drizzle-bg: #2f5882;
+  --day-haze-bg: #5389ac;
+  --day-mist-bg: #3cd3ad;
   // --day-sun-bg: #f7f2be;
 
   --night-rain-bg: #001525;
@@ -29,8 +29,8 @@ html{
 
   --rain-drop: #07396a;
   --snow-flake: white;
-  
-  // background: #5d2f60; 
+
+  // background: #5d2f60;
   background: #003b73;
 
   --cloud-bg1: #126ad2;
@@ -38,81 +38,49 @@ html{
   --cloud-bg3: #00308f;
   --cloud-bg4: #2f5882;
   --cloud-bg5: #5389ac;
-  --main-bg:var(--day-clear-bg);
+  --main-bg: var(--day-clear-bg);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-.Clouds{
-  --main-bg:var(--day-cloud-bg);
-  color:white;
+.Clouds {
+  --main-bg: var(--day-cloud-bg);
+  color: white;
 }
-.Rain{
-  --main-bg:var(--day-rain-bg);
-  color:white;
+.Rain {
+  --main-bg: var(--day-rain-bg);
+  color: white;
 }
-.Clear{
-  --main-bg:var(--day-clear-bg);
-  color:white;
+.Clear {
+  --main-bg: var(--day-clear-bg);
+  color: white;
 }
-.Snow{
-  --main-bg:var(--day-snow-bg);
-  color:black;
+.Snow {
+  --main-bg: var(--day-snow-bg);
+  color: black;
 }
-
 
 .Thunderstorm {
-  --main-bg:var(--day-thunder-bg);
-  color:white;
+  --main-bg: var(--day-thunder-bg);
+  color: white;
 }
 
-
-.Drizzle{
-  --main-bg:var(--day-drizzle-bg);
-  color:black;
+.Drizzle {
+  --main-bg: var(--day-drizzle-bg);
+  color: black;
 }
 .Haze {
-  --main-bg:var(--day-haze-bg);
-  color:black;
-
+  --main-bg: var(--day-haze-bg);
+  color: black;
 }
 .Mist {
-  --main-bg:var(--day-mist-bg);
- color:black;
- 
+  --main-bg: var(--day-mist-bg);
+  color: black;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .app {
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
- 
+
   background: var(--main-bg);
   background-position: bottom;
   background-size: cover;
@@ -120,13 +88,12 @@ html{
   min-height: 100vh;
 }
 
-.main{
+.main {
   position: relative;
   height: 100vh;
   background: var(--main-bg);
-  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
   width: 100%;
- 
 }
 
 .searchContainer {
@@ -139,7 +106,6 @@ html{
 }
 
 .searchBar {
-  
   display: block;
   width: 80%;
   text-align: center;
@@ -150,64 +116,60 @@ html{
   outline: none;
   background: none;
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius:0 0px 16px 16px;
+  border-radius: 16px 0px 16px 0px;
   transition: 0.9s;
+  margin-top:5rem;
 }
 .searchBar:focus {
   background-color: rgba(255, 255, 255, 0.75);
-  border-radius: 0px 0px 0px 0px;
-  
+  border-radius: 0px 16px 0px 16px;
+ 
 }
 
-.locationContainer{
-  position:absolute;
-  bottom:2rem;
-  left:1rem;
-  font-size:2rem;
+.locationContainer {
+  position: absolute;
+  bottom: 4rem;
+  left: 5rem;
+  font-size: 2rem;
 }
 
-.temp{
+.temp {
   text-align: center;
   font-size: 6rem;
-
+  border:1px white solid;
 }
 
-.secondary{
-  display:flex;
-  // margin:10rem;
-  // flex-direction:column;
+.secondary {
+  display: flex;
+  margin:10rem;
+  flex-direction:column;
   justify-content: space-between;
   text-align: left;
-  // border:1px solid black;
+  border:1px solid black;
+  font-size: large;
 }
 
-.primary{
-  display:flex;
+.primary {
+  display: flex;
   justify-content: center;
+  flex-direction: column;
   
-  
-  flex-direction:column;
-  height:40vh;
+  border:1px white solid;
 }
 
-
-
-
-@media all  and (min-width: 600px) {
-  .main{
-   
+@media all and (min-width: 600px) {
+  .main {
     height: 100vh;
-  
-    box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-    width:90%;}
-   
+
+    box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
+    width: 90%;
   }
-@media only screen and (min-width:900px) {
-  .main{
-   
-    height: 90vh;
+}
+@media only screen and (min-width: 900px) {
+  .main {
+    height: 80vh;
     background: var(--main-bg);
-   
-    width:40%;}
-   
+
+    width: 40%;
   }
+}
