--- a/src/App.scss
+++ b/src/App.scss
@@ -12,46 +12,38 @@ html {
 
 :root {
   --day-rain-bg: #5389ac;
-  // --day-snow-bg: #7f8e9d;
-  --day-snow-bg: white;
+  --day-snow-bg: #7f8e9d;
+  // --day-snow-bg: white;
   --day-thunder-bg: #001525;
-  --day-clear-bg: #fe9928;
-  --day-cloud-bg: #5389ac;
+  --day-clear-bg: #f9f0cf;
+  --day-clear-color:#fc9400;
+  --day-cloud-bg: #4a5f72;
   --day-drizzle-bg: #2f5882;
   --day-haze-bg: #5389ac;
   --day-mist-bg: #3cd3ad;
-  // --day-sun-bg: #f7f2be;
 
   --night-rain-bg: #001525;
   --night-snow-bg: #001525;
   --night-clear-bg: #001525;
   --night-cloud-bg: #001525;
 
-  --rain-drop: #07396a;
-  --snow-flake: white;
-
   // background: #5d2f60;
-  background: #003b73;
-
-  --cloud-bg1: #126ad2;
-  --cloud-bg2: #0643a5;
-  --cloud-bg3: #00308f;
-  --cloud-bg4: #2f5882;
-  --cloud-bg5: #5389ac;
+  // background: #003b73;
+  --lightOnDark: white;
   --main-bg: var(--day-clear-bg);
 }
 
 .Clouds {
   --main-bg: var(--day-cloud-bg);
-  color: black;
+  color: var(--lightOnDark);
 }
 .Rain {
   --main-bg: var(--day-rain-bg);
-  color: black;
+  color: var(--lightOnDark);
 }
 .Clear {
   --main-bg: var(--day-clear-bg);
-  color: black;
+  --color: var(--day-clear-color);
 }
 .Snow {
   --main-bg: var(--day-snow-bg);
@@ -60,12 +52,12 @@ html {
 
 .Thunderstorm {
   --main-bg: var(--day-thunder-bg);
-  color: black;
+  color: var(--lightOnDark);
 }
 
 .Drizzle {
   --main-bg: var(--day-drizzle-bg);
-  color: black;
+  color: var(--lightOnDark);
 }
 .Haze {
   --main-bg: var(--day-haze-bg);
@@ -80,218 +72,207 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-font-family:Roboto;
+  font-family: Roboto;
   background: var(--main-bg);
+color:var(--color);
   background-position: bottom;
   background-size: cover;
   transition: 0.4s;
   min-height: 100vh;
+ 
 }
 
 .main {
-  display:flex;
- flex-direction: column;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   background: var(--main-bg);
-  box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
- width:100%;
-}
-
-.locationContainer {
-  display:flex;
-  justify-content: flex-end;
-  padding:5rem 2rem;
-  font-size: 2rem;
-
-
-  
-  .magnifier{
-      margin-right:1rem;
-  width:2rem;  
-    
-  }
-
-
-  .searchContainer {
-    appearance: none;
-    background: none;
-    width: 100%;
-   
-    display: flex;
-    // justify-content: flex-end;
-  
-   
-    .magnifier:hover{
-      cursor: pointer;
-    }
-  
-  
-  
-    .searchBar {
-      display: block;
-      margin-right:1rem;
-      width: 0;
-      text-align: center;
-      color: #313131;
-      font-size: 2rem;
-      appearance: none;
-      border: none;
-      outline: none;
-      background: none;
-      background-color: rgba(255, 255, 255, 0.5);
-      transition: 0.9s;
-      
-    }
-
-    .open {
-      background-color: rgba(255, 255, 255, 0.75);
-      width:90%;
-    }
-  
-  }
+  // box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
   
 }
 
+.drawing {
+  width: 100%;
+}
 
+.contentWrapper {
+  padding: 0 10%;
 
+}
 
-
-
-
-
-
-
-
-.primary {
-  padding-top:5rem;
-
+.data {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  .left,
+  .right {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding-top: 40%;
+    // border:1px yellow solid;
+    font-size: 10vw;
+  }
+
+  .left {
+    justify-content: flex-end;
+  }
+  .right {
+    align-items: flex-end;
+    // height:100vh;
+  }
+}
+
+.location {
+  padding-top: 25%;
+  font-size: 5vw;
+}
+
+.burgerContainer {
+  display: flex;
+  // justify-content: flex-end;
+  padding: 60% 0 0;
+  // border:1px solid red;
+}
+
+.burger {
+  display: flex;
   align-items: center;
-
-
-  .description{
-    font-size:4rem;
-  }
-  .temp {
-    text-align: center;
-    font-size: 2rem;
-    
-  }
-
-}
-
-.contentWrapper{
-  // width:50%;
-  // border:1px solid red;
-}
-
-.drawingWrapper{
-  margin-top:5rem;
-  // display:flex;
-  // width:50%; 
-  // align-items: center;
-  // justify-content: center; 
-  // border:1px solid red;
-}
-.drawings{
-  
-//  border:1px solid black;
-padding:0 2rem;
- width:100%;
-
-}
-
-@media all and (min-width: 600px) {
-  .main {
-    height: 100vh;
-    box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
-    width: 90%;
-flex-direction: row;
-
-
-  }
-  
-  .drawingWrapper{
-    margin-top:5rem;
-    display:flex;
-    width:50%; 
-    align-items: center;
-    justify-content: center; 
-    // border:1px solid red;
-  }
-
-
-  .contentWrapper {
-    display:flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    // padding:5rem 2rem;
-    font-size: 2rem;
-    // border:1px solid red;
-    width:50%;
-  }
-  .locationContainer {
-      flex-direction: column;
-    font-size: 2rem;
-  }
-
-.primary{
-
+  justify-content: center;
   flex-direction: column;
+  width: 2rem;
+  height: 2rem;
 }
 
+.burgerLine {
+  width: 15%;
+  padding: 15%;
+  // height: 0.15rem;
+  margin: 15%;
+  background: var(--color);
+  // color: var(--font-reverse);
 }
-@media only screen and (min-width: 900px) {
-  .main {
-    height: 80vh;
-    background: var(--main-bg);
 
-    width: 60%;
-  }
-
-  .locationContainer {
-    //margin:45vh 3vw;
-    font-size: 2rem;
-  }
-
-  .temp {
-    text-align: center;
-    font-size: 6rem;
-  }
-
-  .secondary {
-    display: flex;
-    margin: 10rem;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: left;
-    border: 1px solid black;
-    font-size: large;
-  }
-
-  .primary {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .contentWrapper {
-    width: 50%;
-    // border:1px solid red;
-  }
-
-  .drawingWrapper {
-    display: flex;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
-    // border:1px solid red;
-  }
-  .drawings {
-    //  border:1px solid white;
-    padding: 0 2rem;
-    width: 100%;
-  }
+.burger:hover,
+.menuItemContainer:hover {
+  cursor: pointer;
 }
+
+
+
+.searchContainer {
+  // position:fixed;
+  // transform: translateX(100%);
+  display: flex;
+padding:5% 10%;
+  justify-content: flex-end;
+ 
+.searchBar{
+  background: var(--main-bg);
+background:var(--main-bg);
+opacity:.9;
+// border:none;
+box-shadow: 55px,55px,55px,55px black;
+border-color:var(--color)
+
+}
+}
+
+// .open {
+//   transform: translateX(0%);
+// //  background:yellow;
+//   transition: transform 0.3s ease-out;
+// }
+
+
+
+// @media all and (min-width: 600px) {
+//   .main {
+//     height: 100vh;
+//     box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
+//     width: 90%;
+// flex-direction: row;
+
+//   }
+
+//   .drawingWrapper{
+//     margin-top:5rem;
+//     display:flex;
+//     width:50%;
+//     align-items: center;
+//     justify-content: center;
+//     // border:1px solid red;
+//   }
+
+//   .contentWrapper {
+//     display:flex;
+//     flex-direction: column;
+//     justify-content:center;
+//     align-items: center;
+//     // padding:5rem 2rem;
+//     font-size: 2rem;
+//     // border:1px solid red;
+//     width:50%;
+//   }
+//   .locationContainer {
+//       flex-direction: column;
+//     font-size: 2rem;
+//   }
+
+// .primary{
+
+//   flex-direction: column;
+// }
+
+// }
+// @media only screen and (min-width: 900px) {
+//   .main {
+//     height: 80vh;
+//     background: var(--main-bg);
+
+//     width: 60%;
+//   }
+
+//   .locationContainer {
+//     //margin:45vh 3vw;
+//     font-size: 2rem;
+//   }
+
+//   .temp {
+//     text-align: center;
+//     font-size: 6rem;
+//   }
+
+//   .secondary {
+//     display: flex;
+//     margin: 10rem;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     text-align: left;
+//     border: 1px solid black;
+//     font-size: large;
+//   }
+
+//   .primary {
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: column;
+//   }
+
+//   .contentWrapper {
+//     width: 50%;
+//     // border:1px solid red;
+//   }
+
+//   .drawingWrapper {
+//     display: flex;
+//     width: 50%;
+//     align-items: center;
+//     justify-content: center;
+//     // border:1px solid red;
+//   }
+//   .drawings {
+//     //  border:1px solid white;
+//     padding: 0 2rem;
+//     width: 100%;
+//   }
+// }
