--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,6 @@
 
 html {
   font-size: 62.5%;
-  color: black;
 }
 
 :root {
@@ -16,7 +15,7 @@ html {
   // --day-snow-bg: white;
   --day-thunder-bg: #001525;
   --day-clear-bg: #f9f0cf;
-  --day-clear-color:#fc9400;
+  --day-clear-color: #fc9400;
   --day-cloud-bg: #4a5f72;
   --day-drizzle-bg: #2f5882;
   --day-haze-bg: #5389ac;
@@ -69,35 +68,23 @@ html {
 }
 
 .app {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-family: Roboto;
   background: var(--main-bg);
-color:var(--color);
-  background-position: bottom;
-  background-size: cover;
-  transition: 0.4s;
   min-height: 100vh;
- 
+  display: flex;
 }
 
 .main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background: var(--main-bg);
-  // box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
-  
 }
-
 .drawing {
   width: 100%;
 }
 
 .contentWrapper {
   padding: 0 10%;
-
 }
 
 .data {
@@ -109,7 +96,7 @@ color:var(--color);
     flex-direction: column;
     width: 50%;
     padding-top: 40%;
-    // border:1px yellow solid;
+   
     font-size: 10vw;
   }
 
@@ -118,7 +105,6 @@ color:var(--color);
   }
   .right {
     align-items: flex-end;
-    // height:100vh;
   }
 }
 
@@ -127,152 +113,90 @@ color:var(--color);
   font-size: 5vw;
 }
 
-.burgerContainer {
-  display: flex;
-  // justify-content: flex-end;
-  padding: 60% 0 0;
-  // border:1px solid red;
-}
-
-.burger {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 2rem;
-  height: 2rem;
-}
-
-.burgerLine {
-  width: 15%;
-  padding: 15%;
-  // height: 0.15rem;
-  margin: 15%;
-  background: var(--color);
-  // color: var(--font-reverse);
-}
-
-.burger:hover,
-.menuItemContainer:hover {
-  cursor: pointer;
-}
-
-
-
 .searchContainer {
-  // position:fixed;
-  // transform: translateX(100%);
   display: flex;
-padding:5% 10%;
+  padding: 5% 0;
   justify-content: flex-end;
+
+  .searchBar {
+    background: var(--main-bg);
+    opacity: 0.5;
+    outline: none;
+  }
+}
+
+@media all and (min-width: 700px) {
+  .app {
+    justify-content: center;
+    min-height: 100vh;
+   
+  }
+
+  .main {
+    flex-direction: row;
+  
+  }
+
+  .drawingWrapper {
+    display: flex;
+    width: 50%;
+  
+  
+    
+  }
  
-.searchBar{
-  background: var(--main-bg);
-background:var(--main-bg);
-opacity:.9;
-// border:none;
-box-shadow: 55px,55px,55px,55px black;
-border-color:var(--color)
+
+  .contentWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+  
+  }
+
+  .data {
+ 
+    height:60vh;
+
+
+    .right {
+      width: 100%;
+ 
+      align-items: center;
+      flex-direction:column;
+      justify-content:center;
+      height:100%;
+    }
+
+    .left {
+      display: none;
+    }
+  }
+
 
 }
+
+@media only screen and (min-width: 900px) {
+
+
+ .main{
+ 
+   width:80%;
+   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+ }
+
+ 
+
+
+
+  .contentWrapper {
+    width: 50%;
+    height: 50%;
+  }
+  .drawingWrapper{
+    height:50%;
+  }
+
+  
 }
-
-// .open {
-//   transform: translateX(0%);
-// //  background:yellow;
-//   transition: transform 0.3s ease-out;
-// }
-
-
-
-// @media all and (min-width: 600px) {
-//   .main {
-//     height: 100vh;
-//     box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
-//     width: 90%;
-// flex-direction: row;
-
-//   }
-
-//   .drawingWrapper{
-//     margin-top:5rem;
-//     display:flex;
-//     width:50%;
-//     align-items: center;
-//     justify-content: center;
-//     // border:1px solid red;
-//   }
-
-//   .contentWrapper {
-//     display:flex;
-//     flex-direction: column;
-//     justify-content:center;
-//     align-items: center;
-//     // padding:5rem 2rem;
-//     font-size: 2rem;
-//     // border:1px solid red;
-//     width:50%;
-//   }
-//   .locationContainer {
-//       flex-direction: column;
-//     font-size: 2rem;
-//   }
-
-// .primary{
-
-//   flex-direction: column;
-// }
-
-// }
-// @media only screen and (min-width: 900px) {
-//   .main {
-//     height: 80vh;
-//     background: var(--main-bg);
-
-//     width: 60%;
-//   }
-
-//   .locationContainer {
-//     //margin:45vh 3vw;
-//     font-size: 2rem;
-//   }
-
-//   .temp {
-//     text-align: center;
-//     font-size: 6rem;
-//   }
-
-//   .secondary {
-//     display: flex;
-//     margin: 10rem;
-//     flex-direction: column;
-//     justify-content: space-between;
-//     text-align: left;
-//     border: 1px solid black;
-//     font-size: large;
-//   }
-
-//   .primary {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: column;
-//   }
-
-//   .contentWrapper {
-//     width: 50%;
-//     // border:1px solid red;
-//   }
-
-//   .drawingWrapper {
-//     display: flex;
-//     width: 50%;
-//     align-items: center;
-//     justify-content: center;
-//     // border:1px solid red;
-//   }
-//   .drawings {
-//     //  border:1px solid white;
-//     padding: 0 2rem;
-//     width: 100%;
-//   }
-// }
