--- a/src/App.scss
+++ b/src/App.scss
@@ -97,20 +97,16 @@ html {
     flex-direction: column;
     width: 50%;
     padding-top: 40%;
-
     font-size: 10vw;
   }
 
-  .left {
-    justify-content: flex-end;
-  }
-  .right {
+   .right {
     align-items: flex-end;
   }
 }
 
 .location {
-  padding-top: 25%;
+  // padding-top: 25%;
   font-size: 5vw;
 }
 
